...
                                <color key="backgroundColor" red="0.0" green="0.20000000000000001" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="128" id="g8V-r1-H4P"/>
                                    <constraint firstAttribute="height" constant="40" id="vLm-s7-T1y"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Settings">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="22L-6S-JZM" kind="show" id="7Me-ZZ-gLe"/>
                                </connections>
                            </button>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="OMC-sg-Fg7"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rPz-Ns-QLt">
                                <rect key="frame" x="16" y="20" width="34" height="30"/>
                                <state key="normal" title="Back">
                                    <color key="titleColor" red="0.0" green="0.20000000000000001" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="goBack:" destination="22L-6S-JZM" eventType="touchUpInside" id="rXA-Tp-cX2"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="30" y="135" width="260" height="40"/>
                                <color key="backgroundColor" red="0.0" green="0.20000000000000001" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="260" id="XTW-AN-ggX"/>
                                    <constraint firstAttribute="height" constant="40" id="a9c-tF-FRQ"/>
                                </constraints>
                                <state key="normal" title="Before period ends reminders">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" red="0.10407734662294388" green="0.50008606910705566" blue="0.99879211187362671" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="xPG-Ju-TUT" kind="show" identifier="PeriodEnds" id="jAk-La-ijo"/>
                                </connections>
...
                                <rect key="frame" x="30" y="305" width="260" height="40"/>
                                <color key="backgroundColor" red="0.0" green="0.20000000000000001" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="1FO-2w-ojg"/>
                                    <constraint firstAttribute="height" constant="40" id="7k7-t3-FJg"/>
                                </constraints>
                                <state key="normal" title="Add/Edit Schedule">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="ezW-dd-ccQ" kind="show" id="9zm-mc-Tpy"/>
                                </connections>
                            </button>
...
